--- a/index.html
+++ b/index.html
@@ -70,13 +70,20 @@
 					<p>Si vas a abrir un nuevo comercio o darlo de baja tenes que registrarlo</p>
 				</div>
 			</div>
+			<div class=botonTramite href="#">
+			<div class="imagenBotonTramite"><img src="iconoRentas.png"></div>
+				<div class="textoBoton">
+					<h3>Rentas</h3>
+					<p>Consultá y Pagá tus Impuestos. Estar al día trae Beneficios.</p>
+				</div>
+			</div>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
 	<section class="areasDeGobierno">
 		<h2>Áreas de gobierno</h2>
 		<div class="botonesAreas">
-			<a href="https://www.instagram.com/">
+			<a href="jefeDeGobierno.html">
 			<div class="botonAreaGobierno">
 				<div class="textoBotonArea">
 					<h3>Jefatura de Gobierno</h3>
@@ -165,7 +172,11 @@
 				</div>
 			</div>
 			</a>
-
+		</div>
+		<div class="contenedorBotonVerMas">
+			<div class="botonVerMas">
+				<h4>VER MAS</h4>
+			</div>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
