--- a/jefeDeGobierno.html
+++ b/jefeDeGobierno.html
@@ -18,27 +18,26 @@
 	<section class="contenedorPrincipal">
 		<div class="contenedorTituloParrafo">
 		<a href="index.html">Inicio</a>
-		<h2>Automotores</h2>
-		<p>Inscribí un vehiculo o si lo vendiste registra la baja</p>
+		<h2>Jefatura de gobierno</h2>
+		<p>Asumimos el compromiso de defender todas las transformaciones que logramos hasta ahora y el desafío de seguir construyendo un mejor Pueblo para todos los Tancachenses. Un lugar que nos permita crecer, desarrollarnos y soñar.</p>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
 	<section class="tramitesYServicios">
 		<div class="botonesTramites"> 
-			<a href="tramiteEspecifico.html">
+			<a href="">
 			<div class="botonTramite" href="#">
-				<div class="imagenBotonTramite"><img src="iconoAltaVehiculo.png"></div>
+				<div class="imagenBotonTramite"><img src="iconoCompromiso.png"></div>
 				<div class="textoBoton">
-					<h3>Inscribir Vehiculo</h3>
+					<h3>Compromisos</h3>
 				</div>
-
 			</div>
 			</a>
 			<a href="">
 			<div class=botonTramite href="#">
-			<div class="imagenBotonTramite" ><img src="iconoAltaVehiculo.png"></div>
+			<div class="imagenBotonTramite" ><img src="iconoEquipo.png"></div>
 				<div class="textoBoton">
-					<h3>Dar de Baja Vehiculo</h3>
+					<h3>Nuestro equipo</h3>
 				</div>
 			</div>
 			</a>
