--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 					<p>Consultá y Pagá tus Impuestos. Estar al día trae Beneficios.</p>
 				</div>
 			</div>
+			<div class=botonTramite href="#">
+			<div class="imagenBotonTramite"><img src="iconoOrdenanza.png"></div>
+				<div class="textoBoton">
+					<h3>Ordenanzas</h3>
+					<p>Ordenanzas y Resoluciones del Departamento Ejecutivo Municipal y del Honorable Concejo Deliberante.</p>
+				</div>
+			</div>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
