--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 					<p>Si vas a abrir un nuevo comercio o darlo de baja tenes que registrarlo</p>
 				</div>
 			</div>
+			<a href="https://municipalidad.com/tanca/home/menu">
 			<div class=botonTramite href="#">
 			<div class="imagenBotonTramite"><img src="iconoRentas.png"></div>
 				<div class="textoBoton">
@@ -77,6 +78,8 @@
 					<p>Consultá y Pagá tus Impuestos. Estar al día trae Beneficios.</p>
 				</div>
 			</div>
+			</a>
+			<a href="ordenanzas.html">
 			<div class=botonTramite href="#">
 			<div class="imagenBotonTramite"><img src="iconoOrdenanza.png"></div>
 				<div class="textoBoton">
@@ -84,6 +87,7 @@
 					<p>Ordenanzas y Resoluciones del Departamento Ejecutivo Municipal y del Honorable Concejo Deliberante.</p>
 				</div>
 			</div>
+			</a>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
