--- a/tramiteEspecifico.html
+++ b/tramiteEspecifico.html
@@ -22,6 +22,7 @@
 		<p>Para inscribir un vehiculo. En la parte de Atencion al Publico de la Municipalidad podes realizar este tramite de Lunes a Viernes desde las 7:00 hs a 13:00 hs  </p>
 		</div>
 	</section>
+	<div class="barradivisora"></div>
 	<section class="contenedorRequisitos">
 		<div class="contenedorTituloParrafoRequisito">
 		<h2>Requisitos</h2>
