--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 	<header>
 		<div class="containerHeader">
+			<a href="index.html">
 		<img src="logoEscudo.png" alt="Foto renovacion y logo Tancacha">
+			</a>
 		</div>
 		<button class="ingresar">INGRESAR</button>
 	</header>
@@ -147,7 +149,7 @@
 	<section class="portalDeComunicacion">
 		<h2>Portal de Comunicación</h2>
 		<div class="noticias">
-			<a href="">
+			<a href="noticiaIndividual.html">
 			<div class="noticia">
 				<div class="marcoDeFoto">
 					<img src="industria.jpg">
@@ -185,9 +187,11 @@
 			</a>
 		</div>
 		<div class="contenedorBotonVerMas">
+			<a href="noticias.html">
 			<div class="botonVerMas">
 				<h4>VER MAS</h4>
 			</div>
+			</a>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
