--- a/jefeDeGobierno.html
+++ b/jefeDeGobierno.html
@@ -33,11 +33,11 @@
 				</div>
 			</div>
 			</a>
-			<a href="">
+			<a href="personal.html">
 			<div class=botonTramite href="#">
 			<div class="imagenBotonTramite" ><img src="iconoEquipo.png"></div>
 				<div class="textoBoton">
-					<h3>Nuestro equipo</h3>
+					<h3>Personal</h3>
 				</div>
 			</div>
 			</a>
