--- a/ordenanzas.html
+++ b/ordenanzas.html
@@ -10,7 +10,9 @@
 <body>
 	<header>
 		<div class="containerHeader">
+			<a href="index.html">
 		<img src="logoEscudo.png" alt="Foto renovacion y logo Tancacha">
+			</a>
 		</div>
 		<button class="ingresar">INGRESAR</button>
 	</header>
@@ -19,7 +21,7 @@
 		<div class="contenedorTituloParrafo">
 		<a href="index.html">Inicio</a>
 		<h2>Ordenanzas, resoluciones y presupuestos</h2>
-		<p>Inscribí un vehiculo o si lo vendiste registra la baja</p>
+		<p>Conoce las últimas ordenanzas, proyectos y presupuestos. El principio de transparencia en la gestión pública es uno de los pilares sobre los que se asienta la democracia.</p>
 		</div>
 	</section>
 	
