--- a/tramitesAutomotores.html
+++ b/tramitesAutomotores.html
@@ -10,7 +10,9 @@
 <body>
 	<header>
 		<div class="containerHeader">
+			<a href="index.html">
 		<img src="logoEscudo.png" alt="Foto renovacion y logo Tancacha">
+			</a>
 		</div>
 		<button class="ingresar">INGRESAR</button>
 	</header>
