--- a/personal.html
+++ b/personal.html
@@ -3,33 +3,28 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="tramiteEspecifico.css">
+	<link rel="stylesheet" type="text/css" href="personal.css">
 	<title>Municipalidad de Tancacha</title>
 	<link rel="icon" href="ICONO.ico">
 </head>
 <body>
 	<header>
 		<div class="containerHeader">
-			<a href="index.html">
 		<img src="logoEscudo.png" alt="Foto renovacion y logo Tancacha">
-			</a>
 		</div>
 		<button class="ingresar">INGRESAR</button>
 	</header>
 	<div class="barradivisora"></div>
 	<section class="contenedorPrincipal">
+		<div class="botonInicio"><a href="index.html">Inicio</a></div>
 		<div class="contenedorTituloParrafo">
-		<a href="index.html">Inicio</a>
-		<h2>Inscribir vehiculo</h2>
-		<p>Para inscribir un vehiculo. En la parte de Atencion al Publico de la Municipalidad podes realizar este tramite de Lunes a Viernes desde las 7:00 hs a 13:00 hs  </p>
-		</div>
-	</section>
-	<div class="barradivisora"></div>
-	<section class="contenedorRequisitos">
-		<div class="contenedorTituloParrafoRequisito">
-		<h2>Requisitos</h2>
-		<p>• Vehiculos 0 km: Fotocopia de factura de compra y Fotocopia del titulo.</p>
-		<p>• Vehiculos usados:  Fotocopia del titulo y Baja Municipal.</p>
+		<div class="contenedorFoto"><img src="intendenteElecto.jpg"></div>
+		<div class="contenedorTexto">
+		<h2>Jefatura de gobierno</h2>
+		<h3>Santiago Reyneri</h3>
+
+
+		<p>Asumimos el compromiso de defender todas las transformaciones que logramos hasta ahora y el desafío de seguir construyendo un mejor Pueblo para todos los Tancachenses. Un lugar que nos permita crecer, desarrollarnos y soñar.</p></div>
 		</div>
 	</section>
 	<div class="barradivisora"></div>
